@@ -5,6 +5,8 @@
   * allow sub-bitarray in `.count()`
   * add `util.ones()`
   * `.find()` and `.index()`: add keyword argument `right` for rightmost index
+  * `.itersearch()`: add start and stop argument, and keyword
+    argument `right` (for descending order - starting with rightmost match)
 
 
 2023-12-09   2.8.5:
